--- a/Structured Cabling Studio/Resources/Views/Account/AuthenticationFailed.en.resx
+++ b/Structured Cabling Studio/Resources/Views/Account/AuthenticationFailed.en.resx
@@ -123,4 +123,7 @@
   <data name="Contact to developer" xml:space="preserve">
     <value>Please contact to project developer</value>
   </data>
+  <data name="Go back" xml:space="preserve">
+    <value>Go back</value>
+  </data>
 </root>
