--- a/Structured Cabling Studio/Resources/Views/Account/AuthenticationFailed.uk.resx
+++ b/Structured Cabling Studio/Resources/Views/Account/AuthenticationFailed.uk.resx
@@ -123,4 +123,7 @@
   <data name="Contact to developer" xml:space="preserve">
     <value>Зв'яжіться з розробником проекту</value>
   </data>
+  <data name="Go back" xml:space="preserve">
+    <value>Повернутися назад</value>
+  </data>
 </root>
