--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.ru.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.ru.resx
@@ -117,8 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Welcome" xml:space="preserve">
-    <value>Добро пожаловать!</value>
-    <comment>Test string</comment>
+  <data name="m" xml:space="preserve">
+    <value>м.</value>
+  </data>
+  <data name="Maximum length of the permanent link:" xml:space="preserve">
+    <value>Наибольшая длина постоянного линка (Permanent link):</value>
+  </data>
+  <data name="Minimum length of the permanent link:" xml:space="preserve">
+    <value>Наименьшая длина постоянного линка (Permanent link): </value>
   </data>
 </root>
