--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.en.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.en.resx
@@ -126,4 +126,10 @@
   <data name="Minimum length of the permanent link:" xml:space="preserve">
     <value>Minimum length of the permanent link:</value>
   </data>
+  <data name="Ports count per 1 workplace:" xml:space="preserve">
+    <value>Ports count per 1 workplace:</value>
+  </data>
+  <data name="Workplaces count:" xml:space="preserve">
+    <value>Workplaces count:</value>
+  </data>
 </root>
