--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.uk.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.uk.resx
@@ -126,4 +126,10 @@
   <data name="Minimum length of the permanent link:" xml:space="preserve">
     <value>Мінімальная довжина постійного лінку (Permanent link):</value>
   </data>
+  <data name="Ports count per 1 workplace:" xml:space="preserve">
+    <value>Кількість портів на 1 робоче місце:</value>
+  </data>
+  <data name="Workplaces count:" xml:space="preserve">
+    <value>Кількість робочих місць:</value>
+  </data>
 </root>
