--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.ru.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.ru.resx
@@ -129,6 +129,9 @@
   <data name="Ports count per 1 workplace:" xml:space="preserve">
     <value>Количество портов на 1 рабочее место:</value>
   </data>
+  <data name="Take into account the cable hank meterage" xml:space="preserve">
+    <value>Учитывать метраж кабеля в бухте</value>
+  </data>
   <data name="Workplaces count:" xml:space="preserve">
     <value>Количество рабочих мест:</value>
   </data>
