--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.uk.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.uk.resx
@@ -129,6 +129,9 @@
   <data name="Ports count per 1 workplace:" xml:space="preserve">
     <value>Кількість портів на 1 робоче місце:</value>
   </data>
+  <data name="Take into account the cable hank meterage" xml:space="preserve">
+    <value>Враховувати метраж кабелю в бухті</value>
+  </data>
   <data name="Workplaces count:" xml:space="preserve">
     <value>Кількість робочих місць:</value>
   </data>
