--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.ru.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.ru.resx
@@ -132,6 +132,9 @@
   <data name="Take into account the cable hank meterage" xml:space="preserve">
     <value>Учитывать метраж кабеля в бухте</value>
   </data>
+  <data name="The standard values of a cable hank length" xml:space="preserve">
+    <value>Стандартные значения метража кабеля в бухте</value>
+  </data>
   <data name="Workplaces count:" xml:space="preserve">
     <value>Количество рабочих мест:</value>
   </data>
