--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.uk.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.uk.resx
@@ -132,6 +132,9 @@
   <data name="Take into account the cable hank meterage" xml:space="preserve">
     <value>Враховувати метраж кабелю в бухті</value>
   </data>
+  <data name="The standard values of a cable hank length" xml:space="preserve">
+    <value>Стандартні значенния метража кабелю у бухті</value>
+  </data>
   <data name="Workplaces count:" xml:space="preserve">
     <value>Кількість робочих місць:</value>
   </data>
