--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.ru.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.ru.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Advanced calculation parameters" xml:space="preserve">
+    <value>Дополнительные параметры расчёта</value>
+  </data>
   <data name="Hank length" xml:space="preserve">
     <value>Метраж</value>
   </data>
