--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.uk.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.uk.resx
@@ -120,6 +120,12 @@
   <data name="Advanced calculation parameters" xml:space="preserve">
     <value>Додаткові параметри розрахунку</value>
   </data>
+  <data name="Arbitary ports count per workplace" xml:space="preserve">
+    <value>Дозволити довільну кількість портів на 1 робоче місце</value>
+  </data>
+  <data name="Availability of technological reserve coefficient:" xml:space="preserve">
+    <value>Враховувати коефіцієнт технологічного запасу:</value>
+  </data>
   <data name="Hank length" xml:space="preserve">
     <value>Метраж</value>
   </data>
@@ -137,6 +143,9 @@
   </data>
   <data name="Standart values" xml:space="preserve">
     <value>Стандартні значення</value>
+  </data>
+  <data name="Strict compliance with the standart" xml:space="preserve">
+    <value>Дотримання відповідності стандарту ISO/IEC 11801</value>
   </data>
   <data name="Take into account the cable hank meterage" xml:space="preserve">
     <value>Враховувати метраж кабелю в бухті</value>
