--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.en.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.en.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Add cable selection recommendations" xml:space="preserve">
+    <value>Add cable selection recommendations</value>
+  </data>
   <data name="Advanced calculation parameters" xml:space="preserve">
     <value>Advanced calculation parameters</value>
   </data>
@@ -152,6 +155,9 @@
   </data>
   <data name="The standard values of a cable hank length" xml:space="preserve">
     <value>The standard values of a cable hank length</value>
+  </data>
+  <data name="Will the sections of the cable route run outdoors" xml:space="preserve">
+    <value>Will the sections of the cable route run outdoors</value>
   </data>
   <data name="Workplaces count:" xml:space="preserve">
     <value>Workplaces count:</value>
