--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.ru.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.ru.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Add cable selection recommendations" xml:space="preserve">
+    <value>Добавить рекомендации по подбору кабеля</value>
+  </data>
   <data name="Advanced calculation parameters" xml:space="preserve">
     <value>Дополнительные параметры расчёта</value>
   </data>
@@ -152,6 +155,9 @@
   </data>
   <data name="The standard values of a cable hank length" xml:space="preserve">
     <value>Стандартные значения метража кабеля в бухте</value>
+  </data>
+  <data name="Will the sections of the cable route run outdoors" xml:space="preserve">
+    <value>Будут ли участки кабельной трассы проходить вне помещения</value>
   </data>
   <data name="Workplaces count:" xml:space="preserve">
     <value>Количество рабочих мест:</value>
