--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.uk.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.uk.resx
@@ -129,6 +129,9 @@
   <data name="Availability of technological reserve coefficient:" xml:space="preserve">
     <value>Враховувати коефіцієнт технологічного запасу:</value>
   </data>
+  <data name="Consider standard fire safety requirements" xml:space="preserve">
+    <value>Враховувати стандартні вимогу до пожарної безпеки</value>
+  </data>
   <data name="Hank length" xml:space="preserve">
     <value>Метраж</value>
   </data>
@@ -152,6 +155,9 @@
   </data>
   <data name="Take into account the cable hank meterage" xml:space="preserve">
     <value>Враховувати метраж кабелю в бухті</value>
+  </data>
+  <data name="Take into account the necessity of cable shielding" xml:space="preserve">
+    <value>Враховувати необхідність екранізаціі кабелю</value>
   </data>
   <data name="The standard values of a cable hank length" xml:space="preserve">
     <value>Стандартні значенния метража кабелю у бухті</value>
