--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.uk.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.uk.resx
@@ -162,6 +162,9 @@
   <data name="The standard values of a cable hank length" xml:space="preserve">
     <value>Стандартні значенния метража кабелю у бухті</value>
   </data>
+  <data name="Used connection interfaces" xml:space="preserve">
+    <value>Інтерфейси підключені, які використовуються</value>
+  </data>
   <data name="Will the sections of the cable route run outdoors" xml:space="preserve">
     <value>Чи будуть ділянки кабельної траси проходити поза приміщенням</value>
   </data>
