--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.ru.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.ru.resx
@@ -162,6 +162,9 @@
   <data name="The standard values of a cable hank length" xml:space="preserve">
     <value>Стандартные значения метража кабеля в бухте</value>
   </data>
+  <data name="Used connection interfaces" xml:space="preserve">
+    <value>Используемые интерфейсы подключений</value>
+  </data>
   <data name="Will the sections of the cable route run outdoors" xml:space="preserve">
     <value>Будут ли участки кабельной трассы проходить вне помещения</value>
   </data>
