--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.en.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.en.resx
@@ -147,6 +147,9 @@
   <data name="Ports count per 1 workplace:" xml:space="preserve">
     <value>Ports count per 1 workplace:</value>
   </data>
+  <data name="Restore defaults" xml:space="preserve">
+    <value>Restore defaults</value>
+  </data>
   <data name="Standart values" xml:space="preserve">
     <value>Standart values</value>
   </data>
