--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.uk.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.uk.resx
@@ -147,6 +147,9 @@
   <data name="Ports count per 1 workplace:" xml:space="preserve">
     <value>Кількість портів на 1 робоче місце:</value>
   </data>
+  <data name="Restore defaults" xml:space="preserve">
+    <value>Відновити дефолтні значення</value>
+  </data>
   <data name="Standart values" xml:space="preserve">
     <value>Стандартні значення</value>
   </data>
