--- a/Structured Cabling Studio/Resources/Views/Shared/_SignInWithGooglePartial.en.resx
+++ b/Structured Cabling Studio/Resources/Views/Shared/_SignInWithGooglePartial.en.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Hello" xml:space="preserve">
-    <value>Welcome, </value>
+    <value>Welcome</value>
   </data>
   <data name="LogOut" xml:space="preserve">
     <value>Log Out</value>
