--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.ru.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.ru.resx
@@ -129,6 +129,12 @@
   <data name="Availability of technological reserve coefficient:" xml:space="preserve">
     <value>Учитывать коэффициент технологического запаса:</value>
   </data>
+  <data name="Calculate" xml:space="preserve">
+    <value>Рассчитать</value>
+  </data>
+  <data name="Clean output block" xml:space="preserve">
+    <value>Очистить блок вывода</value>
+  </data>
   <data name="Consider standard fire safety requirements" xml:space="preserve">
     <value>Учитывать стандартные требования к пожарной безопасности</value>
   </data>
@@ -149,6 +155,9 @@
   </data>
   <data name="Restore defaults" xml:space="preserve">
     <value>Восстановить значения по умолчанию</value>
+  </data>
+  <data name="Save to TXT" xml:space="preserve">
+    <value>Сохранить в TXT</value>
   </data>
   <data name="Standart values" xml:space="preserve">
     <value>Стандартные значения</value>
