--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.ru.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.ru.resx
@@ -159,6 +159,12 @@
   <data name="MinPermanentLink" xml:space="preserve">
     <value>Наименьшая длина постоянного линка (Permanent Link):</value>
   </data>
+  <data name="NumberOfPorts" xml:space="preserve">
+    <value>Количество портов на 1 рабочее место:</value>
+  </data>
+  <data name="NumberOfWorkplaces" xml:space="preserve">
+    <value>Количество рабочих мест:</value>
+  </data>
   <data name="Ports count per 1 workplace:" xml:space="preserve">
     <value>Количество портов на 1 рабочее место:</value>
   </data>
