--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.uk.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.uk.resx
@@ -159,6 +159,12 @@
   <data name="MinPermanentLink" xml:space="preserve">
     <value>Мінімальная довжина постійного лінку (Permanent Link):</value>
   </data>
+  <data name="NumberOfPorts" xml:space="preserve">
+    <value>Кількість портів на 1 робоче місце:</value>
+  </data>
+  <data name="NumberOfWorkplaces" xml:space="preserve">
+    <value>Кількість робочих місць:</value>
+  </data>
   <data name="Ports count per 1 workplace:" xml:space="preserve">
     <value>Кількість портів на 1 робоче місце:</value>
   </data>
