--- a/Structured Cabling Studio/Resources/Views/Calculation/Calculate.ru.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Calculate.ru.resx
@@ -132,6 +132,15 @@
   <data name="AveragePermanentLink" xml:space="preserve">
     <value>Средняя длина постоянного линка (Permanent Link):</value>
   </data>
+  <data name="CableHankMeterage" xml:space="preserve">
+    <value>Метраж кабеля в 1-й бухте:</value>
+  </data>
+  <data name="CableQuantity" xml:space="preserve">
+    <value>Необходимое количество кабеля:</value>
+  </data>
+  <data name="CableSelectionRecommendations" xml:space="preserve">
+    <value>Рекомендации по подбору кабеля:</value>
+  </data>
   <data name="Calculate" xml:space="preserve">
     <value>Рассчитать</value>
   </data>
@@ -143,6 +152,9 @@
   </data>
   <data name="Hank length" xml:space="preserve">
     <value>Метраж</value>
+  </data>
+  <data name="HankQuantity" xml:space="preserve">
+    <value>Необходимое количество бухт кабеля:</value>
   </data>
   <data name="m" xml:space="preserve">
     <value>м.</value>
@@ -191,6 +203,9 @@
   </data>
   <data name="The standard values of a cable hank length" xml:space="preserve">
     <value>Стандартные значения метража кабеля в бухте</value>
+  </data>
+  <data name="TotalCableQuantity" xml:space="preserve">
+    <value>Итоговое необходимое количество кабеля:</value>
   </data>
   <data name="Used connection interfaces" xml:space="preserve">
     <value>Используемые интерфейсы подключений</value>
